# playlist-vivpro

./: .gitignore  Music Playlist API.postman_collection.json  README.md  pyproject.toml
playlist/: asgi.py  settings.py  urls.py  wsgi.py
rating/: admin.py  apis.py  models.py  tests.py
rating/migrations/: 0001_initial.py  0002_alter_rating_unique_together_remove_rating_user.py
song/: admin.py  apis.py  dbs.py  helpers.py  literals.py  models.py  serializers.py  tests.py
song/migrations/: 0001_initial.py
